hphp/hack/test/deregister/test_class.php.exp
File "test_class.php", line 4, characters 12-19:
Unbound name: `MCRouter` (an object type) (Naming[2049])
